<resources>
    <string name="app_name">HW3</string>
    <string name="Height">身高: </string>
    <string name="Weight">體重: </string>
    <string name="move_amount">活動量: </string>
    <string name="KneeHeight">膝長: </string>
    <string name="Age">年齡: </string>
    <string name="standard_weight">標準體重: </string>
    <string name="weight_range">體重合理範圍: </string>
    <string name="calories">每日所需熱量: </string>
    <string name="information_input">資訊輸入</string>
    <string name="ideal_weight">理想體重</string>
    <string name="app_introduction">APP介紹</string>
    <string name="exit">exit</string>
    <string name="content">本程式由\n\n1081406 呂坤陽\n1081447 李明昕\n\n製作</string>
    <string name="reset">Reset</string>
    <string name="error">請完整輸入</string>
    <string name="hintInt">0</string>
    <string name="hintFloat">0.0</string>
    <string name="hintRange">1~3</string>
    <string name="add_data">Add</string>
    <string name="load_data">Load</string>
    <string name="delete_data">Delete</string>
    <string name="name_data">Name:</string>
</resources>